# ghaf-infra

./: .envrc  .gitignore  .gitlint  .sops.yaml  .typos.toml  AGENTS.md  README.md  REUSE.toml  default.nix  flake.nix  shell.nix  ssh-keys.yaml  tasks.py
.github/: dependabot.yml
.reuse/: dep5
bootstrap/: README.md  configuration.nix  targets.nix
docs/: adapting-to-new-environments.md  adding-a-host.md  architecture.md  bootstrap.md  deploy-rs.md  ghaf-pr-1872-ci-plan.md  jenkins-authentication.md  jenkins-hw-flashing-analysis.md  jenkins-hw-flashing-current-state.md  jenkins-hw-flashing-notes.md  jenkins-hw-flashing.md  jenkins-testagents.md  monitoring-server.md  monitoring.md  nebula.md  nethsm.md  nixos-anywhere.md  signing.md  softhsm.md  tasks.md
githooks/: check-commit.sh  check-commits.sh  install-git-hooks.sh
hosts/: agents-common.nix  azure-common-2.nix  azure-common.nix  azure-scratch-store-common.nix  common.nix  default.nix  ficolo-common.nix  ficolo-hosts.nix  generic-disk-config.nix  hetzner-cloud.nix  hetzner-robot.nix  machines.nix  nix-cache.nix  qemu-common.nix  registry.nix  vm-nixos-qemu.nix  zramswap.nix
hosts/azure/binary-cache/azure-nix-cache-proxy/: .gitignore  Cargo.toml
hosts/azure/binary-cache/azure-nix-cache-proxy/src/: lib.rs  main.rs  util.rs
keys/: GhafInfraSignECP256.pem  GhafInfraSignECP256.pub  GhafInfraSignProv.pem  GhafInfraSignProv.pub
nix/: apps.nix  checks.nix  default.nix  deployments.nix  devshell.nix  formatter.nix  git-hooks.nix  nixos.nix  nixpkgs.nix  packages.nix  treefmt.nix
scripts/: add-remote-user.sh  (+17 more)
(+557 files in other folders)
